-------------------------------------------------------------------------
Copyright (C) 2019 CERN and copyright holders of VMC Project.
This software is distributed under the terms of the GNU General Public
License v3 (GPL Version 3), copied verbatim in the file "LICENSE".

See https://github.com/vmc-project/vmc for full licensing information.
-------------------------------------------------------------------------

Tags (history):
===============
  19/07/2019
  v0-1:
    - The first tag (not yet for production).
    - All source code/documentation files are identical with 
      the code in ROOT (v6.18/00) vmc directory.
    - All further updates to vmc (except for bug fixes) will
      go to the vmc-project repository.
 

